# Computer-Vision-Exercises

./: .gitignore
Projeto 1/: CMakeLists.txt  Projeto1.cpp  README.md  Requisito1.cpp  Requisito2.cpp  Requisito3.cpp  Requisito4.cpp
Projeto 2 - Camera Calibration/: CMakeLists.txt  README.md  Requisito1.cpp  Requisito2.cpp  Requisito3.cpp  Requisito4.cpp  common.cpp  common.h  distortion.xml  intrinsics.xml
Projeto 2 - Camera Calibration/Requisito2_resultados/: distortion_1.xml  distortion_2.xml  distortion_3.xml  distortion_4.xml  distortion_5.xml  intrinsics_1.xml  intrinsics_2.xml  intrinsics_3.xml  intrinsics_4.xml  intrinsics_5.xml
Projeto 2 - Camera Calibration/Requisito3_resultados/: d_max_1.xml  d_max_2.xml  d_max_3.xml  d_max_4.xml  d_max_5.xml  d_med_1.xml  d_med_2.xml  d_med_3.xml  d_med_4.xml  d_med_5.xml  d_min_1.xml  d_min_2.xml  d_min_3.xml  d_min_4.xml  d_min_5.xml
Testes/: example_18-01.cpp  intrinsics.xml
